<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/agendaTxtView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/agenda"
        android:textSize="24sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/searchEdt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:layout_marginTop="16dp"
        android:hint="@string/search"
        android:paddingHorizontal="20dp"
        app:layout_constraintEnd_toEndOf="@+id/agendaTxtView"
        app:layout_constraintStart_toStartOf="@+id/agendaTxtView"
        app:layout_constraintTop_toBottomOf="@+id/agendaTxtView" />

    <ImageButton
        android:id="@+id/searchBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_baseline_search_24"
        android:layout_margin="8dp"
        app:layout_constraintBottom_toBottomOf="@+id/searchEdt"
        app:layout_constraintStart_toEndOf="@+id/searchEdt"
        app:layout_constraintTop_toTopOf="@+id/searchEdt"
        android:contentDescription="@string/button_description" />

    <TextView
        android:id="@+id/testTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:background="@color/purple_200"
        android:text="Lista de contatos vem aqui"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/searchEdt" />


    <Button
        android:id="@+id/newContactBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:text="@string/new_contact_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/testTextView" />

</androidx.constraintlayout.widget.ConstraintLayout>